--- a/cliente.phtml
+++ b/cliente.phtml
@@ -1,8 +1,11 @@
 <?php
 require_once('autoload.php');
+require_once('conn.php');
 
-$banco = new \SON\Cliente\Model\BancoClientes();
-$cliente = $banco->getCliente($_GET['id']);
+
+
+$cliente = (new SON\Cliente\Model\ClienteModel($conn))->find($_GET['id']);
+
 ?>
 <!DOCTYPE html>
 <html lang="pt-br">
